# service/LogService.go
@@ -2,51 +2,53 @@ package service
 
 import (
 	"GolangAPI/pojo"
-	"log"
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary FindALLUsers
-// @Tags Users
+// @Summary 查詢所有weblog資訊
+// @Tags Get weblog.查詢
 // @Produce application/json
-// @Router / [GET]
-func FindALLUsers(c *gin.Context) {
-	users := pojo.FindALLUsers() //回傳世user陣列
-	c.JSON(http.StatusOK, users)
+// @Router /log/logs [GET]
+func FindALLlogs(c *gin.Context) {
+	logs := pojo.FindALLlogs() //回傳世user陣列
+	c.JSON(http.StatusOK, logs)
 }
 
-// @Summary FindByUserId
-// @Tags Users
+// @Summary 以Id搜尋welog資訊
+// @Tags Get weblog.查詢
 // @Produce application/json
 // @param id path int true "id"
-// @Router /{id} [GET]
-func FindByUserId(c *gin.Context) {
-	user := pojo.FindByUserId(c.Param("id"))
-	if user.Id == 0 { //找不到
+// @Router /log/logs/{id} [GET]
+func FindBylogId(c *gin.Context) {
+	log := pojo.FindBylogId(c.Param("id"))
+	if log.Id == 0 {
 		c.JSON(http.StatusNotFound, "Error沒有此id或格式錯誤")
 		return
 	}
-	log.Println("User -->", user)
-	c.JSON(http.StatusOK, user)
+	fmt.Println("log -->", log)
+	c.JSON(http.StatusOK, log)
 }
 
-// @Summary ADDuser
-// @Tags Users
+// @Summary ADD新增
+// @Tags 新增
 // @Produce application/json
-// @param data body pojo.User true "data"
-// @Router / [POST]
-func PostUser(c *gin.Context) {
-	user := pojo.User{}      //定義user變數是pojo的user //把post的資料傳給變數 傳進來是json格式 用指標
-	err := c.BindJSON(&user) //bind json 如果沒成功 回傳是error
+// @param data body pojo.Log true "data"
+// @Router /log/logs [POST]
+func CreatLog(c *gin.Context) {
+	log := pojo.Log{}
+	err := c.BindJSON(&log)
 	if err != nil {
-		c.JSON(http.StatusNotAcceptable, "Error :"+err.Error()) //如果出現錯誤 無法建立 會回傳回去 json可以直接寫訊息是什麼
+		c.JSON(http.StatusNotAcceptable, "Error :"+err.Error())
 		return
 	}
-	newUser := pojo.CreatUser(user)
-	c.JSON(http.StatusOK, newUser)
+	newLog := pojo.CreatLog(log)
+	c.JSON(http.StatusOK, newLog)
 }
+
+/*
 
 // @Summary Delete
 // @Tags Users
@@ -68,8 +70,9 @@ func DeleteUser(c *gin.Context) {
 // @param id path int true "id"
 // @param data body pojo.User true "data"
 // @Router /{id} [PUT]
+
 func PutUser(c *gin.Context) {
-	user := pojo.User{}
+	user := pojo.logId{}
 	err := c.BindJSON(&user)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, "Error")
@@ -82,3 +85,4 @@ func PutUser(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, user)
 }
+*/
